# flighters_c

./: .gitignore  CMakeLists.txt  README.md
src/: bullet.c  bullet.h  global.h  hero.c  hero.h  main.c  raylib.h  sky.c  sky.h
